# fastapi_chat

./: .gitignore  Dockerfile  README.md  alembic.ini  app.sh  config.py  docker-compose.yml  main.py  nginx.conf  pyproject.toml
alembic/: env.py
alembic/versions/: 50873b7df5af_change_message_model_name.py  5ab5ac088a3d_add_telegram_id_field_to_user_model.py  61687bbf639c_add_messages_table.py  8114b4f4f983_update_user_model.py  c2d906fa8372_database_creation.py
client/: index.html  main.js  package-lock.json  package.json  style.css  url.js  vite.config.js
client/js/: renderAvailableRecipients.js  renderChat.js  renderInputMessage.js  renderLogin.js  renderMessages.js  renderRecipientInfo.js  renderRegister.js  renderUserInfo.js  waitForNewMessages.js
src/: celery_config.py  db.py  redis.py
src/api/: message.py  user.py
src/models/: message.py  user.py
src/schemas/: message.py  user.py
src/services/: auth.py  message.py  user.py
src/telegram_bot/: bot.py  handlers.py  notifications.py
src/utils/: tasks.py  tokens.py  websocket.py
